# cat-printer

./: Cargo.toml  readme.md
src/: cmds.rs  main.rs
