[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
image = "0.24.2"
rand = "0.8.5"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
